OldePrep/OUTPUT/LOGS/2024_07_24__21_06_08.log
Created At "2024_07_24__21_06_08"





----------------------------------[ Listing all Files ]-----------------------------------
total 392K
drwxr-xr-x  5 yarne yarne 4.0K Jul 24 20:53 ./
drwxr-x--- 21 yarne yarne 320K Jul 10 01:58 ../
drwxr-xr-x  3 yarne yarne 4.0K Jul 24 20:48 C/
drwxr-xr-x  3 yarne yarne 4.0K Jul  9 19:32 LATEX/
-rw-r--r--  1 yarne yarne 1.7K Jul 10 00:31 Meeting1.cpp
drwxr-xr-x  5 yarne yarne 4.0K Jul 24 21:06 OUTPUT/
-rwxr-xr-x  1 yarne yarne 6.0K Jul 24 20:55 run1.sh*
-rw-r--r--  1 yarne yarne 9.0K Jul 24 21:06 test.cpp
-rw-r--r--  1 yarne yarne  633 Jun 27 23:21 test.f90
-rw-r--r--  1 yarne yarne 1.4K Jul  9 18:54 test.log
-rw-r--r--  1 yarne yarne 2.4K Jun 20 00:02 test.py
-rw-r--r--  1 yarne yarne 6.9K Jul  9 18:02 test.sty
-rw-r--r--  1 yarne yarne  417 Jul  9 18:30 test.tex
-rw-r--r--  1 yarne yarne  651 Jan 30  2023 vb_21.tex





----------------------------------[ C part right here ]-----------------------------------
test.cpp                                                                           Compile
test.cpp:158:13: error: redefinition of ‘void ShowExampleMenuFile()’
  158 | static void ShowExampleMenuFile()
      |             ^~~~~~~~~~~~~~~~~~~
In file included from C/imgui/misc/single_file/imgui_single_file.h:22,
                 from test.cpp:11:
C/imgui/misc/single_file/../../imgui_demo.cpp:7927:13: note: ‘void ShowExampleMenuFile()’ previously defined here
 7927 | static void ShowExampleMenuFile()
      |             ^~~~~~~~~~~~~~~~~~~





Meeting1.cpp                                                                       Compile
Meeting1.cpp                                                                           Run
359, 105, 81, 74, 809, 927753873, 
-359, -105, -81, -74, -809, -927753869, 





------------------------------------[ Simulatie-tijd ]------------------------------------
2024_07_24__21_06_08 -\> 2024_07_24__21_06_10:                                 00h 00m 02s
